# BGN_Claude

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: alex.md  daniel.md  eva.md  finn.md  johan.md  kai.md  lena.md  marti.md  nora.md  vance.md
data/raw/bloomberg/2027/: Brent_2027.json  Freight_LBE_2027.json  Freight_Sabine_Pass_Asia_2027.json  Freight_Sabine_Pass_NWE_2027.json  HH_2027.json  JKM_2027.json  TTF_2027.json
data/raw/jkm_settlements/: master.csv
data/raw/jkm_settlements/2026-06-04/: extraction_notes.txt  settlements.csv
data/raw/jkm_settlements/2026-06-05/: settlements.csv
data/raw/jkm_settlements/2026-06-08/: extraction_notes.txt  settlements.csv
data/raw/jkm_settlements/2026-06-09/: extraction_notes.txt  settlements.csv
data/raw/jkm_settlements/2026-06-10/: extraction_notes.txt  (+1 more)
data/reference/lng_facilities/: disruptions.csv  liquefaction.csv  regasification.csv
data/reports/: JKM_settlements.xlsx  lng_facilities.xlsx
deals/sabine_ttf_2027/: curves.csv  deal.csv
reports/pricing/: sabine_ttf_2027_2026-05-28.txt
scripts/: fetch_curves_bbg_2027.py  generate_lng_facilities_xlsx.py  merge_jkm_daily.py  price_deal.py  sync_jkm_xlsx.py
src/lng_desk/: __init__.py
src/lng_desk/core/: calendar.py  snapshot.py  units.py
src/lng_desk/curves/: forward.py  placeholders_2027.py
src/lng_desk/data/: bloomberg.py  cache.py  snapshot_loader.py
src/lng_desk/freight/: conversion.py  routes.py  voyage.py
src/lng_desk/pricing/: engine.py
src/lng_desk/trades/: costs.py  deal.py  folder.py
(+2 files in other folders)
