[project]
name = "lng_desk"
version = "0.1.0"
description = "LNG trading desk: curves, pricing, optionality, risk, ideas"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=17",
    "pydantic>=2.7",
    "duckdb>=1.0",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
quant = ["QuantLib>=1.34"]
viz = ["matplotlib>=3.9", "plotly>=5.22"]
dev = [
    "pytest>=8",
    "pytest-benchmark>=4",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lng_desk"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/lng_desk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
